--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,13 @@
         "fix-memory-limit": "cross-env LIMIT=4096 increase-memory-limit"
     },
     "dependencies": {
+        "@amap/amap-jsapi-loader": "^1.0.1",
         "@element-plus/icons-vue": "^2.1.0",
         "axios": "^0.19.2",
         "core-js": "^3.6.5",
         "echarts": "5.3.2",
         "element-plus": "^2.3.4",
+        "font-awesome": "^4.7.0",
         "highlight.js": "^10.6.0",
         "marked": "^2.0.0",
         "mitt": "^3.0.0",
@@ -50,5 +52,5 @@
         "vite": "^4.3.1",
         "vite-plugin-banner": "^0.1.3",
         "vite-plugin-importer": "^0.2.5"
-    }
+    },
 }
