--- a/web/.env.development
+++ b/web/.env.development
@@ -1,8 +1,16 @@
 ENV = 'development'
 VITE_CLI_PORT = 8080
 VITE_SERVER_PORT = 8888
+VITE_BONUS_PORT = 8888
+//VITE_BONUS_PORT = 8848
+
 VITE_BASE_API = /api
+VITE_BONUS_API = /bonus
+
 VITE_BASE_PATH = http://127.0.0.1
+VITE_BONUS_PATH = http://127.0.0.1
+//VITE_BONUS_PATH = http://121.43.119.64
+
 VITE_EDITOR = vscode
 // VITE_EDITOR = webstorm 如果使用webstorm开发且要使用dom定位到代码行功能 请先自定添加 webstorm到环境变量 再将VITE_EDITOR值修改为webstorm
 // 如果使用docker-compose开发模式，设置为下面的地址或本机主机IP
