--- a/web/.env.production
+++ b/web/.env.production
@@ -2,7 +2,9 @@ ENV = 'production'
 
 VITE_CLI_PORT = 8080
 VITE_SERVER_PORT = 8888
+VITE_BONUS_PORT = 8848
 VITE_BASE_API = /api
 VITE_BONUS_API = /bonus
 #下方修改为你的线上ip
-VITE_BASE_PATH = https://demo.gin-vue-admin.com
+VITE_BASE_PATH = https://8.140.18.5
+
