--- a/web/.env.development
+++ b/web/.env.development
@@ -2,17 +2,20 @@ ENV = 'development'
 VITE_CLI_PORT = 8080
 VITE_SERVER_PORT = 8888
 //VITE_BONUS_PORT = 8888
-VITE_BONUS_PORT = 8848
+//VITE_BONUS_PORT = 8848
 //VITE_BONUS_PORT = 8081
+VITE_BONUS_PORT = 5000
 
 VITE_BASE_API = /api
 VITE_BONUS_API = /bonus
 
-VITE_BASE_PATH = http://127.0.0.1
+VITE_BASE_PATH = http://8.140.18.5
+//VITE_BASE_PATH = http://10.128.239.124
 //VITE_BONUS_PATH = http://127.0.0.1
 //VITE_BONUS_PATH = http://8.140.18.5
-//VITE_BONUS_PATH = http://10.128.248.136
-VITE_BONUS_PATH = http://121.43.119.64
+//VITE_BONUS_PATH = http://10.128.231.206
+//VITE_BONUS_PATH = http://121.43.119.64
+VITE_BONUS_PATH = http://10.28.216.178
 
 VITE_EDITOR = vscode
 // VITE_EDITOR = webstorm 如果使用webstorm开发且要使用dom定位到代码行功能 请先自定添加 webstorm到环境变量 再将VITE_EDITOR值修改为webstorm
